--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="style2.css" />
 </head>
 <body class="about-page">
+  <!-- Video background element (hidden by default, shown via JS if enabled) -->
+  <video id="bg-video" class="animated-bg-video" autoplay muted loop playsinline></video>
+
   <header>
     <a href="index.html" class="home-link" data-dynamic>
       <h1 class="site-title"></h1>
