--- a/post.html
+++ b/post.html
@@ -9,6 +9,9 @@
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
+  <!-- Video background element -->
+  <video id="bg-video" class="animated-bg-video" autoplay muted loop playsinline></video>
+
   <header>
     <a href="index.html" class="home-link" data-dynamic>
       <h1 class="site-title"></h1>
